Fixed visibility of location data and opening hours button.

--- a/vufind/themes/thulb/less/thulb.less
+++ b/vufind/themes/thulb/less/thulb.less
@@ -1718,3 +1718,17 @@ a.checkbox-filter > span > i.fa-info-circle,
 .ws-nowrap {
   white-space: nowrap;
 }
+
+.btn-opening-hours {
+  display: none;
+}
+
+@media (max-width: @screen-sm-max) {
+  .btn-opening-hours {
+    display: block;
+  }
+
+  .location-data-wrapper {
+    display: none;
+  }
+}
